--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -1,12 +1,12 @@
 .card {
   border: 1px solid #F3F3F3;
   padding: 20px;
-  width: 210px;
-  border-radius:40px ;
+  width: 400px;
+  border-radius:60px ;
   font-weight: 400;
   font-size:14px;
   height: 410px;
-  margin-right: 30px;
+
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   margin-bottom: 30px;
   &:hover{
@@ -58,11 +58,12 @@
   cursor: pointer;
 }
 .pivoCards{
-
+  border-radius: 50px;
   display:block;
   margin:auto;
-  width:50px;
-  height:150px;
+  width:250px;
+  height:300px;
+  margin-bottom: 10px;
 
 }
 
