--- a/src/Pages/MovieDetails/movieCard.module.scss
+++ b/src/Pages/MovieDetails/movieCard.module.scss
@@ -1,13 +1,18 @@
-.card {
-  display: block;
+.cardx {
+  flex-wrap: wrap;
+  display: flex;
   border: 1px solid #F3F3F3;
-  padding: 20px;
-  width: 400px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 600px;
   border-radius:40px ;
   font-weight: 400;
-  font-size:14px;
+  font-size:20px;
   height: 600px;
-  margin:auto;
+  padding-bottom:10px;
+
+  margin-bottom: 50px;
 
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
@@ -45,7 +50,7 @@
 
 
 .movieCards{
-
+  border-radius: 30px;
   margin:30px 30px;
   width:290px;
   height:500px;
@@ -61,3 +66,4 @@
   display:block;
   margin:auto;
 }
+
